# pubscan

./: .gitignore  CLAUDE.md  README.md  plan.md  pubscan_cmd.py
.github/workflows/: build-pubscan-wheels.yml
crates/ruff/: Cargo.toml
crates/ruff/src/: args.rs  lib.rs
crates/ruff/src/commands/: analyze_api.rs  mod.rs
crates/ruff/tests/: analyze_api.rs  analyze_api_nested.rs
crates/ruff/tests/snapshots/: analyze_api__analyze_all_definition.snap  analyze_api__analyze_classes.snap  analyze_api__analyze_package@json_format.snap  analyze_api__analyze_package@text_format.snap  analyze_api__analyze_single_module@text_format.snap  analyze_api__analyze_single_module_short@short_flag.snap  analyze_api_nested__analyze_module_symbol_access.snap  analyze_api_nested__analyze_module_symbol_access.snap.new
crates/ruff_api_analyzer/: Cargo.toml  README.md  pyproject.toml
crates/ruff_api_analyzer/python/: MANIFEST.in  PUBLISHING.md  README.md  pyproject.toml  setup.py  test_pubscan.py
crates/ruff_api_analyzer/python/.github/PULL_REQUEST_TEMPLATE/: release.md
crates/ruff_api_analyzer/python/.github/workflows/: build-wheels.yml
crates/ruff_api_analyzer/python/pubscan/: __init__.py  __main__.py  cli.py
crates/ruff_api_analyzer/src/: main.rs
crates/ruff_linter/examples/: binding_analysis.rs
crates/ruff_linter/src/: lib.rs
crates/ruff_linter/src/checkers/: mod.rs
crates/ruff_linter/src/checkers/ast/: mod.rs
examples/: binding_analysis_example.rs
pubscan/: cli.py
test_package/client/: __init__.py
test_package/src/pkg1/pkg2/: __init__.py
