[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pubscan"
dynamic = ["version"]
description = "A tool for analyzing Python module's public API surface area"
readme = "README.md"
authors = [
    {name = "Ruff Developers", email = "info@ruff.rs"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/astral-sh/ruff"
Documentation = "https://docs.astral.sh/ruff"
Repository = "https://github.com/astral-sh/ruff"

[project.scripts]
pubscan = "pubscan.cli:main"
