[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pubscan"
dynamic = ["version"]
description = "A tool for analyzing Python module's public API surface area"
readme = "README.md"
authors = [
    {name = "Ruff Developers", email = "info@ruff.rs"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/astral-sh/ruff"
Documentation = "https://docs.astral.sh/ruff"
Repository = "https://github.com/astral-sh/ruff"

[project.scripts]
pubscan = "pubscan.cli:main"

[tool.cibuildwheel]
# Skip PyPy and musllinux
skip = ["pp*", "*-musllinux*"]

# Build for CPython 3.9, 3.10, 3.11, 3.12, 3.13
build = ["cp39-*", "cp310-*", "cp311-*", "cp312-*", "cp313-*"]

# Build for both Intel and ARM on macOS
archs = {macos = ["x86_64", "arm64"], windows = ["auto"], linux = ["auto"]}

# Environment variables for all platforms
environment = {CIBUILDWHEEL = "1"}

# Commands to run before build
before-build = ["pip install -e ."]

# Test command to run after building
test-command = "pubscan --help"
